--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary mb-3" >
+<nav class="navbar navbar-expand-lg bg-body-tertiary mb-3 sticky-top" >
   <div class="container">
     <%= link_to "Photogram", root_path, class: "navbar-brand" %>
     
@@ -26,7 +26,6 @@
       </ul>
      
      <ul class= "navbar-nav ">
-      
       <% if user_signed_in? %>
          <li class="nav-item">
       <%= link_to "Edit #{current_user.username}", edit_user_registration_path, class: "nav-link" %>
@@ -46,6 +45,7 @@
       <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
       </li>
       <% end %>
+   
     </div>
   </div>
 </nav>
