--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,34 @@
+<div class="row">
+ <div class="col-md-6 offset-md-3">
 
 <h1><%= @users.username %></h1>
 
+<ul class="nav nav-pills nav-fill">
+  <li class="nav-item">
+    <%= link_to "Post", user_path(@users.username), class: "nav-link active" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Likes", liked_path(@users.username), class: "nav-link" %>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Feed</a>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link" href="#">Followers</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Following</a>
+  </li>
+</ul>
+
 
 <h2>Own photos</h2>
+
+</div>
+</div>
+
+
+
 
 
 
@@ -33,7 +59,6 @@
     </li>
      <% end%>
     
-  
   </ul>
   <div class="card-body">
     <%= render "comments/form", comment: Comment.new(photo_id: photo.id) %>
