--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,13 +27,21 @@
      
      <ul class= "navbar-nav ">
       <% if user_signed_in? %>
+         <li>
+      <%= link_to " #{current_user.username} Profile", user_path(current_user.username), class: "nav-link" %>
+      </li>
+         
          <li class="nav-item">
       <%= link_to "Edit #{current_user.username}", edit_user_registration_path, class: "nav-link" %>
       </li>
-    
+      
      <li class="nav-item">
       <%= link_to "Sign out", destroy_user_session_path, class: "nav-link", data: { turbo_method: :delete } %>
       </li>
+     
+     
+    
+     
     
       <% else %>
          <li class="nav-item">
