--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -1,4 +1,42 @@
+<div class="row">
+ <div class="col-md-6 offset-md-3">
 
+<h1><%= @user.username %></h1>
+
+<ul class="nav nav-pills nav-fill">
+  <li class="nav-item">
+    <%= link_to "Post", user_path(@user.username), class: "nav-link" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Likes", liked_path(@user.username), class: "nav-link" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Feed", feed_path(@user.username), class: "nav-link active" %>
+  </li>
+  </li>
+   <!--<li class="nav-item">
+    <a class="nav-link" href="#">Followers</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Following</a>
+  </li>-->
+</ul>
+
+
+<div>
+</div>
+
+<h2>Feed</h2>
+
+</div>
+</div>
+
+
+
+
+
+
+<% current_user.feed.each do |photo| %>
 <div class ="row">
 <div class="col-md-6 offset-md-3">
 
@@ -33,3 +71,5 @@
 
 </div>
 </div>
+
+<%end %>
