--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,14 +11,14 @@
     <%= link_to "Likes", liked_path(@users.username), class: "nav-link" %>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Feed</a>
+<%= link_to "Feed", feed_path(@users.username), class: "nav-link" %>
   </li>
-   <li class="nav-item">
+  <!-- <li class="nav-item">
     <a class="nav-link" href="#">Followers</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Following</a>
-  </li>
+  </li>-->
 </ul>
 
 
