all tabbed interfaces working

--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -36,7 +36,7 @@
 
 
 
-<% current_user.feed.each do |photo| %>
+<% @user.feed.each do |photo| %>
 <div class ="row">
 <div class="col-md-6 offset-md-3">
 
