--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,32 +1,16 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3 sticky-top" >
   <div class="container">
-    <%= link_to "Photogram", root_path, class: "navbar-brand" %>
+   <div>
+      <%= link_to "Photogram", root_path, class: "navbar-brand" %>
+      <%= link_to "Feed", feed_path(current_user.username), class: "navbar-link"%>
+    </div>
+
     
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Resources
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/photos">Photos</a></li>
-             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/comments">Comments</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/follow_requests">Follow Request</a></li>
-            <li><hr class="dropdown-divider"></li>
-           <li><a class="dropdown-item" href="/likes">Likes</a></li>
-          </ul>
-        </li>
-        
-      </ul>
-     
-     <ul class= "navbar-nav ">
+     <ul class= "navbar-nav">
       <% if user_signed_in? %>
+
+         
          <li>
       <%= link_to " #{current_user.username} Profile", user_path(current_user.username), class: "nav-link" %>
       </li>
@@ -54,6 +38,6 @@
       </li>
       <% end %>
    
-    </div>
+   
   </div>
 </nav>
