--- a/app/views/photos/liked.html.erb
+++ b/app/views/photos/liked.html.erb
@@ -2,7 +2,7 @@
  <div class="col-md-6 offset-md-3">
 
 
-<h1><%= @user.username %></h1>
+<h1>Likes</h1>
 
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
@@ -13,17 +13,16 @@
   </li>
   <li class="nav-item">
     <%= link_to "Feed", feed_path(@user.username), class: "nav-link" %>
-  <!--</li>
-   <li class="nav-item">
-    <a class="nav-link" href="#">Followers</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Following</a>
-  </li>-->
+</li>
+ <li class="nav-item">
+    <%= link_to "Following", following_path(@user.username), class: "nav-link" %>
+</li>
+ <li class="nav-item">
+    <%= link_to "Followers", followers_path(@user.username), class: "nav-link" %>
+</li>
 </ul>
 
 
-<h2>Liked photos</h2>
 
 </div>
 </div>
