--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -1,8 +1,9 @@
 <div class="row">
  <div class="col-md-6 offset-md-3">
 
-<h1><%= @user.username %></h1>
+<h1>Feed</h1>
 
+<p class="lead text-muted"> posted by people you follow</p>
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
     <%= link_to "Post", user_path(@user.username), class: "nav-link" %>
@@ -15,17 +16,17 @@
   </li>
   </li>
      <li class="nav-item">
-<%= link_to "followers", followers_path(@user.username), class: "nav-link" %>
+<%= link_to "Followers", followers_path(@user.username), class: "nav-link" %>
   </li>
   <li class="nav-item">
-    <%= link_to "following", following_path(@user.username), class: "nav-link" %>
+    <%= link_to "Following", following_path(@user.username), class: "nav-link" %>
   </li>
 </ul>
 
 <div>
 </div>
 
-<h2>Feed</h2>
+
 
 </div>
 </div>
