--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,10 +1,32 @@
+<div class="row">
+ <div class="col-md-6 offset-md-3">
+
 <h1>followers</h1>
-<% current_user.accepted_received_follow_requests.each do |list| %>
 
 
-<ul>
- <li> <%= link_to "#{list.sender.username}", user_path(list.sender.username) %></li>
+<ul class="nav nav-pills nav-fill">
+  <li class="nav-item">
+    <%= link_to "Post", user_path(@user.username), class: "nav-link" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Likes", liked_path(@user.username), class: "nav-link" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Feed", feed_path(@user.username), class: "nav-link" %>
+  </li>
+  </li>
+     <li class="nav-item">
+<%= link_to "Followers", followers_path(@user.username), class: "nav-link active" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Following", following_path(@user.username), class: "nav-link" %>
+  </li>
 </ul>
 
-
+<% current_user.followers.each do |follower| %>
+  <ul>
+    <li> <%= link_to "#{follower.username}", user_path(follower.username) %></li>
+  </ul>
 <%end %>
+ </div>
+</div>
