--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,6 +1,34 @@
-<h1>following</h1>
-<% current_user.accepted_sent_follow_requests.each do |list| %>
-<ul>
- <li> <%= link_to "#{list.recipient.username}", user_path(list.recipient.username) %></li>
+<div class="row">
+ <div class="col-md-6 offset-md-3">
+
+ <h1>following</h1>
+
+
+<ul class="nav nav-pills nav-fill">
+  <li class="nav-item">
+    <%= link_to "Post", user_path(@user.username), class: "nav-link" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Likes", liked_path(@user.username), class: "nav-link" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Feed", feed_path(@user.username), class: "nav-link" %>
+  </li>
+  </li>
+     <li class="nav-item">
+<%= link_to "Followers", followers_path(@user.username), class: "nav-link" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Following", following_path(@user.username), class: "nav-link active" %>
+  </li>
 </ul>
+
+
+<% current_user.leaders.each do |following| %>
+<ul>
+ <li> <%= link_to "#{following.username}", user_path(following.username) %></li>
+</ul>
+
 <%end %>
+  </div>
+</div>
