--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,40 +1,33 @@
 <div class="row">
  <div class="col-md-6 offset-md-3">
 
-<h1><%= @users.username %></h1>
+<h1>Posts</h1>
 
 
 
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
-    <%= link_to "Post", user_path(@users.username), class: "nav-link active" %>
+    <%= link_to "Post", user_path(@user.username), class: "nav-link active" %>
   </li>
   <li class="nav-item">
-    <%= link_to "Likes", liked_path(@users.username), class: "nav-link" %>
+    <%= link_to "Likes", liked_path(@user.username), class: "nav-link" %>
   </li>
   <li class="nav-item">
-<%= link_to "Feed", feed_path(@users.username), class: "nav-link" %>
+<%= link_to "Feed", feed_path(@user.username), class: "nav-link" %>
   </li>
    <li class="nav-item">
-<%= link_to "followers", followers_path(@users.username), class: "nav-link" %>
+<%= link_to "followers", followers_path(@user.username), class: "nav-link" %>
   </li>
   <li class="nav-item">
-    <%= link_to "following", following_path(@users.username), class: "nav-link" %>
+    <%= link_to "following", following_path(@user.username), class: "nav-link" %>
   </li>
 </ul>
 
-
-<h2>Own photos</h2>
-
 </div>
 </div>
 
 
-
-
-
-
-<% @users.own_photos.each do |photo| %>
+<% @user.own_photos.each do |photo| %>
 <div class ="row">
 <div class="col-md-6 offset-md-3">
 
