--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,10 @@
   <div class="container">
    <div>
       <%= link_to "Photogram", root_path, class: "navbar-brand" %>
-      <%= link_to "Feed", feed_path(current_user.username), class: "navbar-link"%>
+     
+     <%if user_signed_in?%>
+      <%= link_to "Feed", feed_path(current_user.username), class: "nav-link text-muted" %>
+    <% end %>
     </div>
 
     
@@ -12,13 +15,13 @@
 
          
          <li>
-      <%= link_to " #{current_user.username} Profile", user_path(current_user.username), class: "nav-link" %>
+      <%= link_to " Your Profile", user_path(current_user.username), class: "nav-link" %>
       </li>
-         
+     <!--make this a drop down and put sign out in it and edit-->
          <li class="nav-item">
-      <%= link_to "Edit #{current_user.username}", edit_user_registration_path, class: "nav-link" %>
+      <%= link_to "#{current_user.username}", edit_user_registration_path, class: "nav-link" %>
       </li>
-      
+
      <li class="nav-item">
       <%= link_to "Sign out", destroy_user_session_path, class: "nav-link", data: { turbo_method: :delete } %>
       </li>
