--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -36,10 +36,13 @@
 <div class="col-md-6 offset-md-3">
 
 <div class="card m-4" >
+     <div class="card-header">
+      <%= link_to "#{photo.owner.username}", user_path(photo.owner.username) %>
+      </div>
    <%= image_tag photo.image, class: "card-img-top" %>
 
   <div class="card-body">
-    <h4 class="card-title"><%= photo.owner.username %></h4>
+   
     <p class="card-text"><%= photo.caption %></p>
   </div>
   <ul class="list-group list-group-flush">
