added discover page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,6 +6,9 @@
      
      <%if user_signed_in?%>
       <%= link_to "Feed", feed_path(current_user.username), class: "nav-link text-muted" %>
+      <%= link_to "Discover", discover_path(current_user.username), class: "nav-link text-muted" %>
+   
+   
     <% end %>
     </div>
 
