--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -35,14 +35,16 @@
 <div class ="row">
 <div class="col-md-6 offset-md-3">
 
-<div class="card m-4" >
-     <div class="card-header">
-      <%= link_to "#{photo.owner.username}", user_path(photo.owner.username) %>
+<div class="card m-5" >
+     <div class="card-header mt-3">
+      <%= link_to "#{photo.owner.username}", user_path(photo.owner.username)%>
+      
       </div>
+   
    <%= image_tag photo.image, class: "card-img-top" %>
 
   <div class="card-body">
-   
+  
     <p class="card-text"><%= photo.caption %></p>
   </div>
   <ul class="list-group list-group-flush">
